--- a/src/pages/AllCountriesFlagsPage/styles.module.css
+++ b/src/pages/AllCountriesFlagsPage/styles.module.css
@@ -1,4 +1,12 @@
 .root {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -ms-flex-wrap: wrap;
+    flex-wrap: wrap;
+    -webkit-box-pack: center;
+    -ms-flex-pack: center;
+    justify-content: center;
     width: 100%;
     font-family: 
       'EireneSans',
@@ -16,6 +24,6 @@
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
     text-rendering: optimizeLegibility;
+    -webkit-box-sizing: border-box;
+    box-sizing: border-box;
 }
-
-
