--- a/src/components/Auth/AuthGitHub/styles.module.css
+++ b/src/components/Auth/AuthGitHub/styles.module.css
@@ -6,6 +6,7 @@
     box-shadow: rgba(83, 82, 84, 0.2) 0 15px 30px -5px;
     box-sizing: border-box;
     color: grey;
+    background-color: rgb(240, 240, 240);
     display: block;
     font-family: 
       'EireneSans',
@@ -23,7 +24,7 @@
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
     text-rendering: optimizeLegibility;
-    font-size: 20px;
+    font-size: 100%;
     justify-content: center;
     line-height: 1em;
     width: 40vh;
@@ -48,7 +49,7 @@
     
   }
   
-  @media (min-width: 768px) {
+  @media (max-width: 768px) {
     .github_button {
       font-size: 100%;
       min-width: 196px;
