--- a/src/components/VisitedListComponent/styles.module.css
+++ b/src/components/VisitedListComponent/styles.module.css
@@ -19,16 +19,17 @@
 .edit_button {
     position: fixed;
     top: 70px;
-    right: 5%;
-    z-index: 1000;
+    right: 2%;
+    z-index: 999;
     margin-left: auto;
     margin-right: 5%;
     white-space: nowrap;
     align-items: center;
     justify-content: center;
     background-image: grey;
+    background-color: rgb(240, 240, 240);
     border-radius: 8px;
-    border: solid grey;
+    border: 1px solid grey;
     box-shadow: rgba(83, 82, 84, 0.2) 0 15px 30px -5px;
     box-sizing: border-box;
     color: grey;
@@ -78,7 +79,12 @@
   }
 }
 
-.edit_button:hover {
-    box-shadow: 0 6px 20px rgba(0, 0, 0, 0.3);
+@media (max-width: 480px) {
+  .edit_button {
+    font-size: 80%;
+    width: 50px;
+    top: 55px;
+    
+  }
 }
 
