--- a/src/components/WishListComponent/WishListContainer/styles.module.css
+++ b/src/components/WishListComponent/WishListContainer/styles.module.css
@@ -69,30 +69,40 @@
     font-size: 300%;
     cursor: pointer;
     color: rgb(234, 56, 86);
+    margin-left: 3vw;
     margin-right: 3vw;
 }
 
 .wishContainer:hover .like:hover {
     color: lightgrey;
     transform: scale(0.9);
+
 }
 
 .visited {
     visibility: hidden;
-    place-self: center;
-    place-content: center;
+    display: flex;
+    align-items: center;
     justify-content: center;
     width: 45px;
-
+    height: 45px;
+    -webkit-box-align: center;
+    -webkit-box-pack: center;
+    box-sizing: border-box;
+    position: relative;
 }
 
 .wishContainer:hover .visited {
     visibility: visible;
-    display: block;
+    display: -webkit-flex;
+    display: flex;
+    -webkit-box-align: center;
+    -webkit-box-pack: center;
+    align-items: center;
     justify-content: center;
-    align-self: center;
     font-size: 200%;
-    margin-left: 3vw;
+    margin-left: 2vw;
+    margin-right: 2vw;
     font-family: 
       'EireneSans',
       -apple-system,
@@ -111,17 +121,26 @@
     text-rendering: optimizeLegibility;
     cursor: pointer;
     color: grey;
+    box-sizing: border-box;
+    width: 45px;
+    height: 45px;
 }
 
 .wishContainer:hover .visited:hover {
-    transform: scale(1.1);
     background-color: lightgray;
     border-radius: 10px;
+    min-width: 45px;
+    min-height: 45px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    box-sizing: border-box;
 }
 
-.visited:hover {
+/* .visited:hover {
     transform: scale(1.1);
-}
+    -webkit-transform: scale(1.1);
+} */
 
 .flag {
     position: relative;
@@ -166,9 +185,89 @@
     letter-spacing: 5px;
     color: #0a0806;
     padding-left: 20px;
+    padding-right: 20px;
     word-break: keep-all;
 }
 
 .wishContainer:hover .name {
     color: aliceblue;
+}
+
+@media (max-width: 768px) {
+    
+    .flag {
+        padding-left: 15px;
+        padding-right: 5px;
+    }
+    
+    .flag img {
+        height: 4vh;
+        width: auto;
+    }
+    
+    .name {
+        font-size: 125%;
+        letter-spacing: 2px;
+        -ms-flex-wrap: nowrap;
+        flex-wrap: nowrap;
+        display: inline-flex;
+    }
+
+    .wishContainer:hover .like {
+        font-size: 250%;
+        margin-right: 2vw;
+    }
+    
+    .wishContainer:hover .visited {
+        font-size: 170%;
+        margin-left: 2vw;
+    }
+}
+
+@media (max-width: 480px) {
+
+    .wishContainer {
+        padding-left: 10px;
+        padding-right: 10px;
+    }
+    
+    .wishContainer::after {
+        left: 3%;
+        right: 3%;
+    }
+    
+    .flag {
+        padding-left: 10px;
+        padding-right: 3px;
+    }
+    
+    .name {
+        font-size: 125%;
+        letter-spacing: 1px; 
+    }
+
+    .wishContainer:hover .like {
+        font-size: 200%;
+        margin-right: 1vw;
+    }
+    
+    .visited {
+        width: 30px;
+        height: 30px;
+    }
+
+    .wishContainer:hover .visited {
+        
+        font-size: 150%;
+        width: 30px;
+        height: 30px;
+    }
+
+    .wishContainer:hover .visited:hover {
+        border-radius: 6px;
+        min-width: 30px;
+        min-height: 30px;
+        
+    }
+
 }
