--- a/src/index.css
+++ b/src/index.css
@@ -57,4 +57,27 @@ code {
   min-height: 100vh;
 }
 
+.h1 {
+    width: 100%;
+    font-family: 
+      'EireneSans',
+      -apple-system,
+      BlinkMacSystemFont,
+      'Segoe UI',
+      Roboto,
+      Oxygen,
+      Ubuntu,
+      Cantarell, 
+      'Fira Sans',
+      'Droid Sans',
+      'Helvetica Neue',
+      sans-serif;
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
+    text-rendering: optimizeLegibility;
+    font-size: 300%;
+    justify-content: center;
+    text-align: center;
+}
+
 
