--- a/src/pages/ProfilePage/styles.module.css
+++ b/src/pages/ProfilePage/styles.module.css
@@ -58,8 +58,10 @@
     padding-right: 30px;
     font-size: 16px;
     box-sizing: border-box; 
+    border: 1px solid grey;
     transition: all 0.3s ease;
     resize: vertical;
+    text-indent: 1px;
     font-family: 
       'EireneSans',
       -apple-system,
@@ -70,7 +72,7 @@
       Ubuntu,
       Cantarell, 
       'Fira Sans',
-      'Droid Sans',
+      'Droid Sans',f
       'Helvetica Neue',
       sans-serif;
     -webkit-font-smoothing: antialiased;
@@ -124,9 +126,10 @@
     white-space: nowrap;
     align-items: center;
     background-image: grey;
+    background-color: rgb(240, 240, 240);
     border: 0;
     border-radius: 8px;
-    border: solid grey;
+    border: 1px solid grey;
     box-shadow: rgba(83, 82, 84, 0.2) 0 15px 30px -5px;
     box-sizing: border-box;
     color: grey;
@@ -288,3 +291,161 @@
     color: white; 
 }
 
+@media (max-width: 768px) {
+  .page_container {
+    flex-direction: column;
+    min-height: auto;
+  }
+  
+  .img_container {
+    display: none;
+  }
+  
+  .info_container {
+    flex: 1;
+    max-width: 100%;
+    min-height: auto;
+    padding: 15px;
+    order: 2;
+    width: 100%;
+  }
+  
+  .page_title {
+    font-size: 200%;
+    margin: 0;
+  }
+
+  .profile_menu_option {
+    margin-left: 0;
+    text-align: left;
+    font-size: 130%;
+  }
+  
+  .profile_menu_option {
+    margin-left: 0;
+    font-size: 120%;
+    text-align: left;
+  }
+  
+  .input_name_change form {
+    flex-direction: column;
+    align-items: flex-start; 
+    margin-left: 0;
+    width: 100%;
+    gap: 10px;
+  }
+  
+   .input_field {
+    width: 100%;
+    max-width: 300px;
+    box-sizing: border-box;
+    font-size: 14px;
+    padding: 4px 10px;
+    margin: 5px 0;
+    max-height: 40px;
+    border: 1px solid grey;
+    resize: none; 
+  }
+  
+  .input_field::placeholder {
+    font-size: 14px;
+    height: auto;
+  }
+  
+  .input_button,
+  .clear_lists_button,
+  .add_to_wishlist_button {
+    width: auto; 
+    min-width: 120px;
+    max-width: 200px;
+    min-width: auto;
+    margin-left: 0;
+    padding: 10px 15px;
+    font-size: 16px;
+    height: 40px;
+  }
+  
+  .clear_lists_button,
+  .add_to_wishlist_button {
+    margin-left: 10px;
+  }
+  
+  .name_change_output,
+  .name_change_output_random,
+  .auth_method {
+    margin-left: 0;
+    text-align: left; 
+  }
+  
+  .random_flag img {
+    width: 60px;
+  }
+  
+  .name_change_output_random {
+    white-space: normal;
+    text-align: left; 
+    justify-content: flex-start;
+    flex-wrap: wrap;
+  }
+  
+  .random_container {
+    margin-left: 10px;
+  }
+
+  .separationLine {
+    margin: 15px 0;
+    width: 100%;
+    text-align: left;
+  }
+}
+
+@media (max-width: 480px) {
+  .page_title {
+    font-size: 1.5em;
+    margin-left: 0;
+  }
+  
+  .profile_menu_option {
+    font-size: 1.2em;
+    margin-left: 0;
+  }
+  
+  .input_button,
+  .clear_lists_button,
+  .add_to_wishlist_button {
+    font-size: 14px;
+    padding: 4px 12px;
+    height: 36px;
+    min-width: 100px;
+    max-width: 180px;
+    margin-bottom: 0;
+  }
+
+  .input_field {
+    max-width: 250px;
+    font-size: 15px;
+    height: 40px;
+    min-height: 36px;
+  }
+
+  .input_field::placeholder {
+    margin: 10px auto;
+  }
+  
+  .name_change_output,
+  .name_change_output_random {
+    font-size: 14px;
+  }
+
+  .random_container {
+    margin-left: 10px;
+  }
+  
+  .random_flag img {
+    width: 50px;
+  }
+  
+  .input_name_change form {
+    gap: 8px;
+  }
+}
