--- a/src/pages/WishListPage/styles.module.css
+++ b/src/pages/WishListPage/styles.module.css
@@ -71,21 +71,26 @@
     margin-top: -10px;
 }
 
-.greetings {
+.greetings, .greetings_shared {
   align-items: center;
   justify-content: center;
   text-align: center;
   margin: 20px;
-  margin-bottom: 40px;
+  margin-bottom: 0px;
+}
+
+.greetings_shared {
+  margin-top: -20px;
 }
 
 .share_button {
     white-space: nowrap;
     align-items: center;
     background-image: grey;
+    background-color: rgb(240, 240, 240);
     border: 0;
     border-radius: 8px;
-    border: solid grey;
+    border: 1px solid grey;
     box-shadow: rgba(83, 82, 84, 0.2) 0 15px 30px -5px;
     box-sizing: border-box;
     color: grey;
@@ -175,10 +180,85 @@
     #2b0a4a;
      opacity: 80%;
 }
+
+.mobileBreak {
+  display: none;
+}
   
-@media (min-width: 768px) {
+@media (max-width: 768px) {
+  .h1 {
+    font-size: 220%;
+  }
+  
+  .h2 {
+    font-size: 170%;
+  }
+  
+  .greetings {
+    margin: 15px;
+    margin-bottom: 30px;
+  }
+  
   .share_button {
-    font-size: 100%;
-    min-width: 196px;
+    font-size: 18px;
+    padding: 11px 18px;
+  }
+  
+  .links_container {
+    margin-top: 5vh;
+    flex-wrap: wrap;
+  }
+  
+  .link_to_countries {
+    width: 40vw;
+    min-width: 250px;
+    height: 25vh;
+    min-height: 250px;
+    font-size: 230%;
+    margin: 3%;
+  }
+
+   .mobileBreak {
+    display: block;
+  }
+}
+
+@media (max-width: 480px) {
+  .h1 {
+    font-size: 200%;
+  }
+  
+  .h2 {
+    font-size: 150%;
+    margin-top: -5px;
+  }
+  
+  .greetings {
+    margin: 10px;
+    margin-bottom: 20px;
+  }
+  
+  .share_button {
+    font-size: 16px;
+    padding: 10px 16px;
+    min-width: 110px;
+  }
+  
+  .links_container {
+    flex-direction: column;
+    margin-top: 3vh;
+  }
+  
+  .link_to_countries {
+    width: 60vw;
+    min-width: 200px;
+    height: 20vh;
+    min-height: 200px;
+    font-size: 200%;
+    margin: 10px 0;
+  }
+
+   .mobileBreak {
+    display: block;
   }
 }
